--- a/index.html
+++ b/index.html
@@ -41,77 +41,69 @@
             padding: 10px;
             box-sizing: border-box;
         }
-        /* Box 1 */
-        .box-1 {
-            background-color: #FF0000;
-            color: #FFF;
-            box-shadow: 4px 4px 8px rgba(255, 0, 0, 0.5);
-        }
-        .box-1:hover {
-            background-color: #C70000;
-            box-shadow: 8px 8px 16px rgba(255, 0, 0, 0.8);
-            transform: translateY(-10px);
-        }
+        /* Box Styles */
+        .box-1 { background-color: #FF0000; color: #FFF; box-shadow: 4px 4px 8px rgba(255, 0, 0, 0.5); }
+        .box-1:hover { background-color: #C70000; box-shadow: 8px 8px 16px rgba(255, 0, 0, 0.8); transform: translateY(-10px); }
 
-        /* Box 2 */
-        .box-2 {
-            background-color: #333;
-            color: #FFF;
-            box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
-        }
-        .box-2:hover {
-            background-color: #555;
-            box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.8);
-            transform: rotate(5deg);
-        }
+        .box-2 { background-color: #333; color: #FFF; box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5); }
+        .box-2:hover { background-color: #555; box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.8); transform: rotate(5deg); }
 
-        /* Box 3 */
-        .box-3 {
-            background-color: #FFF;
-            border: 2px solid #FF0000;
-            color: #FF0000;
-            box-shadow: 4px 4px 8px rgba(255, 0, 0, 0.3);
-        }
-        .box-3:hover {
-            background-color: #FFEEEE;
-            color: #C70000;
-            box-shadow: 10px 10px 20px rgba(255, 0, 0, 0.6);
-            transform: scale(1.1);
-        }
+        .box-3 { background-color: #FFF; border: 2px solid #FF0000; color: #FF0000; box-shadow: 4px 4px 8px rgba(255, 0, 0, 0.3); }
+        .box-3:hover { background-color: #FFEEEE; color: #C70000; box-shadow: 10px 10px 20px rgba(255, 0, 0, 0.6); transform: scale(1.1); }
 
-        /* Box 4 */
-        .box-4 {
-            background: linear-gradient(45deg, #FF0000, #333);
-            color: #FFF;
-            box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
-        }
-        .box-4:hover {
-            background: linear-gradient(45deg, #C70000, #555);
-            box-shadow: 12px 12px 24px rgba(0, 0, 0, 0.9);
-            transform: skew(-5deg, -5deg);
-        }
+        .box-4 { background: linear-gradient(45deg, #FF0000, #333); color: #FFF; box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5); }
+        .box-4:hover { background: linear-gradient(45deg, #C70000, #555); box-shadow: 12px 12px 24px rgba(0, 0, 0, 0.9); transform: skew(-5deg, -5deg); }
 
-        /* Box 5 */
-        .box-5 {
-            background-color: #FF5A5A;
-            color: #FFF;
-            box-shadow: 4px 4px 8px rgba(255, 90, 90, 0.5);
-        }
-        .box-5:hover {
-            background-color: #FF8080;
-            box-shadow: 8px 8px 16px rgba(255, 90, 90, 0.8);
-            transform: translateX(10px) translateY(10px);
-        }
+        .box-5 { background-color: #FF5A5A; color: #FFF; box-shadow: 4px 4px 8px rgba(255, 90, 90, 0.5); }
+        .box-5:hover { background-color: #FF8080; box-shadow: 8px 8px 16px rgba(255, 90, 90, 0.8); transform: translateX(10px) translateY(10px); }
+
+        .box-6 { background: linear-gradient(135deg, #FF0000, #FF8080); color: #FFF; box-shadow: 4px 4px 8px rgba(255, 0, 0, 0.5); }
+        .box-6:hover { transform: scale(1.2); }
+
+        .box-7 { background-color: #FF8080; color: #FFF; border: 2px solid #333; }
+        .box-7:hover { background-color: #FF0000; transform: translateY(-10px) rotate(5deg); }
+
+        .box-8 { background-color: #FFF; color: #000; border: 2px dashed #FF0000; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); }
+        .box-8:hover { background-color: #FFCCCC; color: #C70000; transform: scale(1.1); }
+
+        .box-9 { background-color: #333; color: #FF0000; border: 3px solid #FFF; }
+        .box-9:hover { border-color: #FF8080; transform: translateX(-5px); }
+
+        .box-10 { background: radial-gradient(circle, #FF5A5A, #333); color: #FFF; box-shadow: 4px 4px 10px rgba(255, 0, 0, 0.5); }
+        .box-10:hover { box-shadow: 8px 8px 16px rgba(255, 0, 0, 0.8); transform: scale(1.2); }
+
+        .box-11 { background-color: #FF0000; color: #FFF; border: 4px double #333; }
+        .box-11:hover { transform: rotate(-5deg); }
+
+        .box-12 { background-color: #FFF; color: #333; border: 2px solid #FF0000; }
+        .box-12:hover { background-color: #FF0000; color: #FFF; }
+
+        .box-13 { background: repeating-linear-gradient(45deg, #FF0000, #FF0000 10px, #FFF 10px, #FFF 20px); }
+        .box-13:hover { transform: rotate(15deg); }
+
+        .box-14 { background: linear-gradient(90deg, #FF0000, #FFF, #333); color: #FFF; }
+        .box-14:hover { transform: skew(5deg); }
+
+        .box-15 { background-color: #FFCCCC; color: #000; border: 3px dotted #FF0000; }
+        .box-15:hover { border-color: #333; transform: scale(1.05); }
     </style>
 </head>
 <body>
-    <h1>A.P ROADLINES</h1>
+    <h1>A.P ROADLINE</h1>
     <div class="container">
         <div class="box box-1">A.P ROADLINE</div>
         <div class="box box-2">A.P ROADLINE</div>
         <div class="box box-3">A.P ROADLINE</div>
         <div class="box box-4">A.P ROADLINE</div>
         <div class="box box-5">A.P ROADLINE</div>
+        <div class="box box-6">A.P ROADLINE</div>
+        <div class="box box-7">A.P ROADLINE</div>
+        <div class="box box-8">A.P ROADLINE</div>
+        <div class="box box-9">A.P ROADLINE</div>
+        <div class="box box-10">A.P ROADLINE</div>
+        <div class="box box-11">A.P ROADLINE</div>
+        <div class="box box-12">A.P ROADLINE</div>
+
     </div>
 </body>
 </html>
