--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.P ROADLINE</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;600&family=Lobster&family=Poppins:wght@300;500&family=Raleway:wght@300;600&family=Playfair+Display:wght@400;600&family=Oswald:wght@300;500&family=Source+Sans+Pro:wght@300;600&family=Pacifico&family=Caveat&family=Comfortaa&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;600&family=Lobster&family=Poppins:wght@300;500&family=Raleway:wght@300;600&family=Playfair+Display:wght@400;600&family=Oswald:wght@300;500&family=Source+Sans+Pro:wght@300;600&family=Pacifico&display=swap');
 
         body {
             font-family: Arial, sans-serif;
@@ -14,7 +14,6 @@
             background-color: #F7F7F7;
             color: #000;
         }
-
         h1 {
             color: #FF0000;
             text-align: center;
@@ -23,15 +22,13 @@
             margin-top: 20px;
             font-family: 'Lobster', cursive;
         }
-
         .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             padding: 20px;
-            gap: 10px;
+            gap: 20px;
         }
-
         .box {
             width: 150px;
             height: 150px;
@@ -42,77 +39,89 @@
             font-size: 1rem;
             font-weight: bold;
             text-transform: uppercase;
-            transition: all 0.5s ease;
+            transition: all 0.3s ease;
             text-align: center;
             padding: 10px;
             box-sizing: border-box;
         }
-
-        /* Dynamic Styling for 100 Boxes */
-        .box:nth-child(odd) { background: linear-gradient(45deg, #FF8080, #FFEDED); color: #333; font-family: 'Roboto', sans-serif; }
-        .box:nth-child(even) { background: radial-gradient(circle, #111, #444); color: #FFF; font-family: 'Montserrat', sans-serif; }
-        .box:nth-child(3n) { background: linear-gradient(90deg, #FF0000, #FFF); color: #FF0000; font-family: 'Pacifico', cursive; }
-        .box:nth-child(5n) { background-color: #FFEDED; color: #FF0000; border: 2px solid #FF5A5A; font-family: 'Raleway', sans-serif; }
-        .box:nth-child(7n) { background: radial-gradient(circle, #000, #333); color: #FFF; font-family: 'Source Sans Pro', sans-serif; }
-        .box:nth-child(10n) { background-color: #FFF5F5; color: #C70000; border: 2px dotted #FF0000; font-family: 'Playfair Display', serif; }
-        .box:nth-child(4n) { background: linear-gradient(135deg, #FF5A5A, #000); color: #FFF; font-family: 'Oswald', sans-serif; }
-        .box:nth-child(6n) { background: radial-gradient(circle, #111, #444); color: #FF5A5A; font-family: 'Comfortaa', cursive; }
-        .box:nth-child(9n) { background: linear-gradient(45deg, #FFCCCC, #FFF); color: #333; font-family: 'Poppins', sans-serif; }
-        .box:nth-child(11n) { background: linear-gradient(90deg, #333, #FF0000); color: #FFF; font-family: 'Caveat', cursive; }
-        .box:nth-child(12n) { background: radial-gradient(circle, #F7F7F7, #FF0000); color: #333; font-family: 'Roboto', sans-serif; }
-
-        /* Hover Effects */
+        /* Dynamically Generated Styles */
+        .box:nth-child(odd) {
+            background: linear-gradient(45deg, #FF8080, #FFEDED);
+            color: #333;
+            font-family: 'Roboto', sans-serif;
+            box-shadow: 4px 4px 8px rgba(255, 0, 0, 0.2);
+        }
+        .box:nth-child(even) {
+            background: radial-gradient(circle, #333, #000);
+            color: #FFF;
+            font-family: 'Montserrat', sans-serif;
+            box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+        }
         .box:hover {
             transform: scale(1.1) rotate(5deg);
             box-shadow: 8px 8px 16px rgba(255, 0, 0, 0.6);
         }
-
-        .box:nth-child(odd):hover {
-            transform: translateY(-10px);
-            box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.8);
+        /* Specific Styles for Unique Groups */
+        .box:nth-child(3n) {
+            background: linear-gradient(90deg, #FF0000, #FFF);
+            color: #FF0000;
+            font-family: 'Pacifico', cursive;
+            border: 2px solid #FF5A5A;
         }
-
-        .box:nth-child(even):hover {
-            transform: translateX(10px);
-            box-shadow: 8px 8px 16px rgba(255, 90, 90, 0.8);
+        .box:nth-child(5n) {
+            background-color: #FFF;
+            color: #000;
+            font-family: 'Raleway', sans-serif;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+        .box:nth-child(7n) {
+            background: radial-gradient(circle, #FFF, #FFEDED);
+            color: #333;
+            font-family: 'Poppins', sans-serif;
+        }
+        .box:nth-child(10n) {
+            background-color: #333;
+            color: #FFF;
+            border: 2px dotted #FF5A5A;
+            font-family: 'Playfair Display', serif;
+        }
+        .box:nth-child(4n) {
+            background: linear-gradient(135deg, #FF5A5A, #000);
+            color: #FFF;
+            font-family: 'Oswald', sans-serif;
+        }
+        .box:nth-child(6n) {
+            background: radial-gradient(circle, #111, #444);
+            color: #FF5A5A;
+            font-family: 'Source Sans Pro', sans-serif;
+            box-shadow: 6px 6px 12px rgba(255, 90, 90, 0.3);
+        }
+        .box:nth-child(8n) {
+            background-color: #222;
+            color: #FFF;
+            font-family: 'Roboto', sans-serif;
+        }
+        .box:nth-child(9n) {
+            background: linear-gradient(45deg, #FFCCCC, #FFF);
+            color: #333;
+            font-family: 'Montserrat', sans-serif;
+        }
+        .box:nth-child(11n) {
+            background: linear-gradient(90deg, #333, #FF0000);
+            color: #FFF;
+            font-family: 'Pacifico', cursive;
+        }
+        .box:nth-child(12n) {
+            background: radial-gradient(circle, #F7F7F7, #FF0000);
+            color: #333;
+            font-family: 'Poppins', sans-serif;
         }
     </style>
 </head>
 <body>
     <h1>A.P ROADLINE</h1>
     <div class="container">
-        <!-- Generate 100 Unique Divs -->
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
-        <div class="box">A.P ROADLINE</div>
+        <!-- Generate 50 Unique Divs -->
         <div class="box">A.P ROADLINE</div>
         <div class="box">A.P ROADLINE</div>
         <div class="box">A.P ROADLINE</div>
